tests/ui/macros/macro-path-prelude-fail-2.rs
mod m {
    fn check() {
        Result::Ok!(); //~ ERROR failed to resolve: partially resolved path in a macro
    }
}

fn main() {}
